bug 291861: XPCDispInterface.cpp fails to compile with Microsoft Visual Studio 2005 Beta 2 patch by Stephen Walker <sdwalker@myrealbox.com>, r=shaver, a=shaver